
namespace Utility_Scripts
{
    public static class Constants
    {
        // SCENE NAMES
        public const string MainMenu = "MainMenu";
        public const string LevelEditor = "LevelEditor";
        public const string TestLevel = "TestLevel";

        // ANIMATION PARAMETERS
        public const string IdleClipName = "Idle";
        public const string CrouchClipName = "Crouch";
        public const string RunClipName = "Run";
        public const string LandClipName = "Land";
        public const string RiseClipName = "Rise";
        public const string FallClipName = "Fall";
        public const string WalledClipName = "Walled";
        public const string DashWindupClipName = "DashWindup";
        public const string DashClipName = "Dash";
    }
}
